# VkDiffGaussianRasterizer

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  tri_strip.cpp
.github/workflows/: linux-gcc.yml  macos-clang.yml  windows-msvc.yml
shader/: CMakeLists.txt
shader/src/DeviceSorter/: Common.glsl  DeviceSorter.glsl  DeviceSorterSize.glsl  DeviceSorterWave.glsl  GlobalHist.comp  OneSweep.comp  Reset.comp  ScanHist.comp  Size.glsl
shader/src/DeviceSorterTest/: Generate.comp  Size.glsl  Validate.comp
shader/src/Rasterizer/: BackwardCopy.comp  BackwardDraw.frag  BackwardDraw.geom  BackwardDraw.vert  BackwardReset.comp  BackwardView.comp  Common.glsl  Draw.vert  ForwardCopy.comp  ForwardDraw.frag  ForwardDraw.geom  ForwardDraw.vert  ForwardReset.comp  ForwardView.comp  Math.cs.slang  Math.glsl  Math.slangh  Size.glsl  genMathGLSL.sh
src/: Camera.hpp  Context.cpp  Context.hpp  DeviceSorter.cpp  DeviceSorter.hpp  DeviceSorterShader.cpp  DeviceSorterTest.cpp  ForwardRasterizer.cpp  ForwardRasterizer.hpp  Rasterizer.cpp  Rasterizer.hpp  RasterizerF32.cpp  RasterizerF32.hpp  RasterizerF32Shader.cpp  RasterizerShader.cpp  RasterizerTest.cpp  ResourceUtil.hpp  main.cpp
test/: CuImageWrite.cu  CuImageWrite.hpp  CuTileRasterizer.cu  CuTileRasterizer.hpp  DeviceSorterTest.cpp  ErrorTest.cpp  ErrorTest.cu  ErrorTest.hpp  GSDataset.cpp  GSDataset.hpp  GSModel.cpp  GSModel.hpp  MemoryTest.cpp  MemoryTest.cu  PerformanceTest.cpp  RasterizerTest.cpp  VerboseTest.cpp  VerboseTest.cu  VkCuBuffer.cu  VkCuBuffer.hpp
test/dep/json/: CMakeLists.txt
test/dep/stb_image_write/: CMakeLists.txt
test/dep/tinyfiledialogs/: CMakeLists.txt
